Fix responsiveness alignment issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -159,9 +159,9 @@ p {
 @media screen and (max-width: 767px) {
     h1 { font-size: 5.8vw; }
     h2 { font-size: 10vw; }
-    h3 { font-size: 0.85rem; }
-    h4 { font-size: 1.1rem; }
-    h5 { font-size: 2rem; }
+    h3 { font-size: 3.5vw; }
+    h4 { font-size: 4vw; }
+    h5 { font-size: 7vw; }
     h6 { font-size: 1.8rem; }
     a { font-size: 1rem; }
     p { font-size: 1.2rem; }
