--- a/src/components/BigProject/BigProject.scss
+++ b/src/components/BigProject/BigProject.scss
@@ -38,6 +38,7 @@
     overflow: hidden;
     width: 30rem;
     height: 22.5rem;
+    border-radius: 0.45rem;
 
     > img {
       width: 30rem;
@@ -53,18 +54,26 @@
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1440px) {
   .big-project-container {
-    grid-template-columns: 1fr;
+    grid-column-gap: 3rem;
 
-    > img {
-      order: -1; // move above text when view is shrunk
+    >.image-box {
+        width: 30vw;
+        height: 22.5vw;
+
+      > img {
+        width: 30vw;
+        height: 22.5vw;
+      }
     }
   }
 }
 
 @media screen and (max-width: 767px) {
   .big-project-container {
+    grid-template-columns: 1fr;
+    
     > .text-container {
       width: 70vw;
     }
@@ -76,6 +85,7 @@
       > img {
         width: 70vw;
         height: 52.5vw;
+        order: -1; // move above text when view is shrunk
       }
     }
   }
